objects/TRIMDA__TRIMDA_MatchingResult__c.object
<CustomObject>
    <customHelpPage>TRIMDA__TRIMDA_Help_MatchedRecords</customHelpPage>
    <description>Contain list of matching pairs with match score etc.</description>
    <fields>
        <fullName>TRIMDA__Account1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (Survivor)</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N40000001NaStEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Account2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account (Dupe)</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N40000001NaTLEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Adv_SurvivorshipRule__c</fullName>
        <description>If as an example you are using the Account Number for the Additional Review field you can make a similar Formula field to check which of the records have an account number and, if both have one, if they are different.</description>
        <formula>IF(AND(TRIMDA__Review_Field_1__c=&quot;&quot;,TRIMDA__Review_Field_2__c=&quot;&quot;),&quot;-&quot;, 
IF( TRIMDA__Review_Field_1__c = TRIMDA__Review_Field_2__c , &quot;Same Review Value&quot;,
IF( AND(TRIMDA__Review_Field_1__c = &quot;&quot;, TRIMDA__Review_Field_2__c&lt;&gt;&quot;&quot;) , &quot;Merge (Keep Dupe)&quot;,  
IF( AND(TRIMDA__Review_Field_1__c &lt;&gt; &quot;&quot;, TRIMDA__Review_Field_2__c=&quot;&quot;) , &quot;Merge (Keep Survivor)&quot;, &quot;False Dupe&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adv. SurvivorshipRule</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Contact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact (Survivor)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N40000001NaSuEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact (Dupe)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N40000001NaTBEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Country_1__c</fullName>
        <description>Country/Territory/Region for Record 1</description>
        <label>Territory (Survivor)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Country_2__c</fullName>
        <description>Country/Territory/Region for record 2</description>
        <label>Territory (Dupe)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Derived_Review_Outcome__c</fullName>
        <description>When the ID of the Surviving record is being set, this field will indivate whether the action to be taken is to Merge Left or Merge Right</description>
        <formula>IF(TRIMDA__SurvivorId__c = &quot;&quot;, &quot;Not Reviewed&quot;,IF( OR( TRIMDA__Account1__c = TRIMDA__SurvivorId__c ,TRIMDA__Contact1__c = TRIMDA__SurvivorId__c ,TRIMDA__Lead1__c = TRIMDA__SurvivorId__c ) , &quot;Merge Left&quot;, IF(OR(TRIMDA__Account2__c = TRIMDA__SurvivorId__c ,TRIMDA__Contact2__c = TRIMDA__SurvivorId__c ,TRIMDA__Lead2__c = TRIMDA__SurvivorId__c), &quot;Merge Right&quot; , &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Derived Review Outcome</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__DupeAlertRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dupe Alert</label>
        <referenceTo>TRIMDA__TRIMDA_DupeAlerts__c</referenceTo>
        <relationshipName>R00N40000001NaT8EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__DupeAlertResultRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dupe Alert Result</label>
        <referenceTo>TRIMDA__TRIMDA_DupeAlertResult__c</referenceTo>
        <relationshipName>R00N40000001NaTOEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__ExternalRefId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID, used by Upsert function to update/insert matchresults, to prevent multiple entries for identical dupe pairs</description>
        <externalId>true</externalId>
        <label>External Ref Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TRIMDA__False_Dupe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate wheter the dupe is &quot;false&quot;, which means that the Matcher should not consider this pair a dupe pair for future matches</description>
        <label>False Dupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Is_Merged__c</fullName>
        <description>Formula field to indicate if the matched pair already has been merged</description>
        <formula>if(and( TRIMDA__Lead2__c = &quot;&quot;, TRIMDA__Account2__c  = &quot;&quot;, TRIMDA__Contact2__c = &quot;&quot;),&quot;Yes&quot;, 
if(and( TRIMDA__Lead1__c = &quot;&quot;, TRIMDA__Account1__c  = &quot;&quot;, TRIMDA__Contact1__c = &quot;&quot;),&quot;Yes&quot;, 
if(and( ISPICKVAL(TRIMDA__ObjectName__c ,&apos;Account-Account&apos;),TRIMDA__Account1__c &lt;&gt; &quot;&quot;, TRIMDA__Account2__c &lt;&gt; &quot;&quot;,TRIMDA__Account1__c = TRIMDA__Account2__c) ,&quot;Yes&quot;, 
if(and( or(ISPICKVAL(TRIMDA__ObjectName__c ,&apos;Contact-Contact&apos;),ISPICKVAL(TRIMDA__ObjectName__c ,&apos;Acc+Contact-Acc+Contact&apos;)),TRIMDA__Contact1__c &lt;&gt; &quot;&quot;, TRIMDA__Contact2__c &lt;&gt; &quot;&quot;,TRIMDA__Contact1__c = TRIMDA__Contact2__c) ,&quot;Yes&quot;, 
if(and( or(ISPICKVAL(TRIMDA__ObjectName__c ,&apos;Contact-Contact&apos;),ISPICKVAL(TRIMDA__ObjectName__c ,&apos;Acc+Contact-Acc+Contact&apos;)),or(TRIMDA__Contact1__c =&quot;&quot;, TRIMDA__Contact2__c=&quot;&quot;)) ,&quot;Yes&quot;, 
if(and( ISPICKVAL(TRIMDA__ObjectName__c ,&apos;Lead-Lead&apos;),TRIMDA__Lead1__c &lt;&gt; &quot;&quot;, TRIMDA__Lead2__c &lt;&gt; &quot;&quot;,TRIMDA__Lead1__c = TRIMDA__Lead2__c) ,&quot;Yes&quot;,
if(and( ISPICKVAL(TRIMDA__ObjectName__c, &apos;Lead-Contact&apos;)  , TRIMDA__Lead2__r.IsConverted = true), &quot;Yes&quot;,
if(and( ISPICKVAL(TRIMDA__ObjectName__c, &apos;Lead-Account&apos;)  , TRIMDA__Lead2__r.IsConverted = true), &quot;Yes&quot;,
if(and( ISPICKVAL(TRIMDA__ObjectName__c, &apos;Lead-Lead&apos;)  , TRIMDA__Lead1__r.IsConverted = true), &quot;Yes&quot;,
if(and( ISPICKVAL(TRIMDA__ObjectName__c, &apos;Lead-Lead&apos;)  , TRIMDA__Lead2__r.IsConverted = true), &quot;Yes&quot;,
&quot;No&quot;))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field to indicate if the matched pair already has been merged</inlineHelpText>
        <label>Is Merged</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Lead1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead (Survivor)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N40000001NaT2EAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Lead2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead (Dupe)</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>R00N40000001NaTWEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Match_Class__c</fullName>
        <description>Match Level Class</description>
        <formula>IMAGE( 
CASE(  TRIMDA__Match_Level__c , 
&quot;Loose&quot;, &quot;/img/samples/stars_100.gif&quot;,
&quot;Medium&quot;, &quot;/img/samples/stars_200.gif&quot;,
&quot;Tight&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;SuperTight&quot;, &quot;/img/samples/stars_400.gif&quot;, 
&quot;Exact&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;Match Level Class&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Match_Found_Date__c</fullName>
        <description>Date on which the Match was initially found</description>
        <label>Match Found Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Match_Level_Priority__c</fullName>
        <formula>CASE( TRIMDA__Match_Level__c , &quot;Exact&quot;, 1, &quot;SuperTight&quot;, 2,&quot;Tight&quot;, 3,&quot;Medium&quot;, 4,&quot;Loose&quot;, 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Level Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Match_Level__c</fullName>
        <label>Match Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact</fullName>
                </value>
                <value>
                    <fullName>SuperTight</fullName>
                </value>
                <value>
                    <fullName>Tight</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Loose</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__ObjectName__c</fullName>
        <label>Dupe Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account-Account</fullName>
                </value>
                <value>
                    <fullName>Contact-Contact</fullName>
                </value>
                <value>
                    <fullName>Lead-Lead</fullName>
                </value>
                <value>
                    <fullName>Lead-Account</fullName>
                </value>
                <value>
                    <fullName>Lead-Contact</fullName>
                </value>
                <value>
                    <fullName>Acc+Contact-Acc+Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of Survivor Record</description>
        <inlineHelpText>Owner of Survivor Record</inlineHelpText>
        <label>Owner (Survivor)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001PFaZEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of Dupe Record</description>
        <inlineHelpText>Owner of Dupe Record</inlineHelpText>
        <label>Owner (Dupe)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001PFaWEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Owner_Active_Dupe__c</fullName>
        <formula>IF(TRIMDA__Owner_2__r.IsActive = True,&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Active (Dupe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Owner_Active_Survivor__c</fullName>
        <formula>IF(TRIMDA__Owner_1__r.IsActive = True,&quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Active (Survivor)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Parent_Relationship__c</fullName>
        <formula>if(  ISPICKVAL(TRIMDA__ObjectName__c ,&apos;Account-Account&apos;),
if ( TRIMDA__Account1__r.Id = TRIMDA__Account2__r.ParentId ,&apos;Survivor is Parent&apos;,
if ( TRIMDA__Account2__r.Id = TRIMDA__Account1__r.ParentId ,&apos;Dupe is Parent&apos;,&apos;No Parent-Child Relation&apos;
)
)
,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Record_1__c</fullName>
        <description>Contains the name for record 1 (Contact, Account or Lead)</description>
        <label>Name (Survivor)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Record_2__c</fullName>
        <description>Contain Name of second record (Account, Contact or Lead)</description>
        <label>Name (Dupe)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Resolved__c</fullName>
        <formula>IF( TRIMDA__Is_Merged__c  =&quot;Yes&quot;,IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000UnoI&amp;oid=00D80000000ZWx8&quot;, &quot;Yes&quot;), &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__ReviewFieldDupe1__c</fullName>
        <description>Custom Review Field: Retrieving Site from Account and Email from Contact.
Note! This field retrieves the data for the dupe record (relation Account2__r and Contact2__r), you should create a similar field to retrieve data from the survivor record.</description>
        <formula>CASE(TRIMDA__ObjectName__c, 
&apos;Account-Account&apos;, TRIMDA__Account2__r.Site , 
&apos;Contact-Contact&apos;,  TRIMDA__Contact2__r.Email, 
&apos;Acc+Contact-Acc+Contact&apos;,  TRIMDA__Contact2__r.Email, 
&apos;Lead-Lead&apos;,  TRIMDA__Lead2__r.Email,
&apos;Lead-Contact&apos;,  TRIMDA__Lead2__r.Email,
&apos;Lead-Account&apos;,  TRIMDA__Lead2__r.Company,
&apos;-&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Review Field (Dupe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__ReviewFieldSurvivor1__c</fullName>
        <description>Custom Review Field: Retrieving Site from Account and Email from Contact.
Note! This field retrieves the data for the surviving record (relation Account1__r and Contact1__r), you should create a similar field to retrieve data from the dupe record.</description>
        <formula>CASE(TRIMDA__ObjectName__c, 
&apos;Account-Account&apos;, TRIMDA__Account1__r.Site , 
&apos;Contact-Contact&apos;,  TRIMDA__Contact1__r.Email,
&apos;Acc+Contact-Acc+Contact&apos;,  TRIMDA__Contact1__r.Email, 
&apos;Lead-Lead&apos;,  TRIMDA__Lead1__r.Email,
&apos;Lead-Contact&apos;,  TRIMDA__Contact1__r.Email,
&apos;Lead-Account&apos;,  TRIMDA__Account1__r.Name,
&apos;-&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Review Field (Survivor)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Review_Field_1__c</fullName>
        <label>Review Field (Survivor)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Review_Field_2__c</fullName>
        <label>Review Field (Dupe)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Review_Note__c</fullName>
        <description>Field which allow reviewer to provide notes to the person who will merge the record</description>
        <label>Review Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Review_Outcome__c</fullName>
        <description>Use this field as a review fieldm for users to provide their feedback, make views supporting the differnet values and mass merge accordingly</description>
        <label>Review Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Disapproved</fullName>
                </value>
                <value>
                    <fullName>Merge to Survivor</fullName>
                </value>
                <value>
                    <fullName>Merge to Dupe</fullName>
                </value>
                <value>
                    <fullName>False Dupe</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TRIMDA__Same_Country__c</fullName>
        <description>Provides the value &quot;Yes&quot; if the to Country/Territory/Region fields are identical, &quot;No&quot; if they are not and &quot;not Provided&quot; if both fields are empty.</description>
        <formula>IF(AND(TRIMDA__Country_1__c=&quot;&quot;,TRIMDA__Country_2__c=&quot;&quot;),IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000UnoN&amp;oid=00D80000000ZWx8&quot;, &quot;Not Provided&quot;), IF( TRIMDA__Country_1__c= TRIMDA__Country_2__c ,IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000UnoI&amp;oid=00D80000000ZWx8&quot;, &quot;Yes&quot;),IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000UnoJ&amp;oid=00D80000000ZWx8&quot;, &quot;No&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Same Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Same_Owner__c</fullName>
        <description>Provides the value &quot;Yes&quot; if the to owners are identical, &quot;No&quot; if they are not and &quot;not Provided&quot; if both fields are empty.</description>
        <formula>IF(AND(TRIMDA__Owner_1__c=&quot;&quot;,TRIMDA__Owner_2__c=&quot;&quot;),IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000UnoN&amp;oid=00D80000000ZWx8&quot;, &quot;Not Provided&quot;), IF( TRIMDA__Owner_1__c = TRIMDA__Owner_2__c ,IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000UnoI&amp;oid=00D80000000ZWx8&quot;, &quot;Yes&quot;),IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000UnoJ&amp;oid=00D80000000ZWx8&quot;, &quot;No&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Same Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Same_Review_Value__c</fullName>
        <description>Provides the value &quot;Yes&quot; if the to review fields are identical, &quot;No&quot; if they are not and &quot;not Provided&quot; if both Review fields are empty.</description>
        <formula>IF(AND(TRIMDA__Review_Field_1__c=&quot;&quot;,TRIMDA__Review_Field_2__c=&quot;&quot;),IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000UnoN&amp;oid=00D80000000ZWx8&quot;, &quot;Not Provided&quot;), IF( TRIMDA__Review_Field_1__c = TRIMDA__Review_Field_2__c ,IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000UnoI&amp;oid=00D80000000ZWx8&quot;, &quot;Yes&quot;),IMAGE( &quot;https://na6.salesforce.com/servlet/servlet.ImageServer?id=01580000000UnoJ&amp;oid=00D80000000ZWx8&quot;, &quot;No&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Same Review Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_Address__c</fullName>
        <description>Score for Matching Address details</description>
        <label>Score Address</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_Company__c</fullName>
        <description>Score for matching the Company names</description>
        <label>Score Company</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_Country__c</fullName>
        <description>Score of Country fields. When mapping the Country field to a Territory/Region/Sales ares the label of this field could be changed to be more description for the specific case.</description>
        <label>Score Country</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_CustomKey1__c</fullName>
        <description>Score for matching Custom Key</description>
        <label>Score Custom Key 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_CustomKey2__c</fullName>
        <description>Score for matching Custom Key</description>
        <label>Score Custom Key 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_CustomKey3__c</fullName>
        <description>Score for matching Custom Key</description>
        <label>Score Custom Key 3</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_E_mail__c</fullName>
        <description>Score for matching e-mail addresses</description>
        <label>Score E-mail</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_Facebook__c</fullName>
        <description>Score for matching Facebook references</description>
        <label>Score Facebook</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_GooglePlus__c</fullName>
        <description>Score for matching Google+ references</description>
        <label>Score Google+</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_LastName__c</fullName>
        <description>Score for matching contacts lastnames</description>
        <label>Score LastName</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_LinkedIn__c</fullName>
        <description>Score for matching LinkedIn references</description>
        <label>Score LinkedIn</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_Location__c</fullName>
        <description>Score for matching the city, postcode information</description>
        <label>Score Location</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_Name__c</fullName>
        <description>Score for matching full name of contact</description>
        <label>Score Name</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_Phone__c</fullName>
        <description>Score for matching Phone numbers</description>
        <label>Score Phone</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_Twitter__c</fullName>
        <description>Score for matching Twitter references</description>
        <label>Score Twitter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score_Website__c</fullName>
        <description>Score for matching website addresses</description>
        <label>Score Website</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Score__c</fullName>
        <description>Overall score of matching the 2 records</description>
        <label>Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRIMDA__SurvivorId__c</fullName>
        <description>When reviewing the pairs externally (e.g.in a spreadsheet), populate this field with the ID of the surviving records, then when returning to the review screen you can use the field Derived Review Code to filter and mass merge your records</description>
        <label>Id of Survivor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMDA__Survivorship_Rule__c</fullName>
        <description>Formula Field which produces a text to be intepretated as a recommendation.
If both Review fields e.g. (Account No) is populated, the recommendation is: &apos;False Dupe&apos;, and if one of the records is missing the account no then merge direction is given.</description>
        <formula>IF(AND(TRIMDA__Review_Field_1__c=&quot;&quot;,TRIMDA__Review_Field_2__c=&quot;&quot;),&quot;Not Provided&quot;, IF( TRIMDA__Review_Field_1__c = TRIMDA__Review_Field_2__c , &quot;Same Review Value&quot;, IF( AND(TRIMDA__Review_Field_1__c = &quot;&quot;, TRIMDA__Review_Field_2__c&lt;&gt;&quot;&quot;) , &quot;Merge Right&quot;,  IF( AND(TRIMDA__Review_Field_1__c &lt;&gt; &quot;&quot;, TRIMDA__Review_Field_2__c=&quot;&quot;) , &quot;Merge Left&quot;, &quot;False Dupe&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample: Adv. Survivorship Rule</label>
        <type>Text</type>
    </fields>
    <label>DataTrim Matched Records</label>
    <listViews>
        <fullName>Account_Entry_Match</fullName>
        <columns>NAME</columns>
        <columns>TRIMDA__Account1__c</columns>
        <columns>TRIMDA__Account2__c</columns>
        <columns>TRIMDA__ObjectName__c</columns>
        <columns>TRIMDA__Match_Class__c</columns>
        <columns>TRIMDA__Score__c</columns>
        <columns>TRIMDA__Score_Company__c</columns>
        <columns>TRIMDA__Score_Location__c</columns>
        <columns>TRIMDA__Same_Country__c</columns>
        <columns>TRIMDA__Same_Owner__c</columns>
        <columns>TRIMDA__Same_Review_Value__c</columns>
        <columns>TRIMDA__Resolved__c</columns>
        <columns>TRIMDA__Match_Found_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Account Entry Match</value>
        </filters>
        <filters>
            <field>TRIMDA__False_Dupe__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TRIMDA__Resolved__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>Review Account Entry Match</label>
    </listViews>
    <listViews>
        <fullName>Contact_Entry_Match</fullName>
        <columns>NAME</columns>
        <columns>TRIMDA__Contact1__c</columns>
        <columns>TRIMDA__Contact2__c</columns>
        <columns>TRIMDA__ObjectName__c</columns>
        <columns>TRIMDA__Match_Class__c</columns>
        <columns>TRIMDA__Score__c</columns>
        <columns>TRIMDA__Score_Company__c</columns>
        <columns>TRIMDA__Score_Name__c</columns>
        <columns>TRIMDA__Score_E_mail__c</columns>
        <columns>TRIMDA__Same_Review_Value__c</columns>
        <columns>TRIMDA__Resolved__c</columns>
        <columns>TRIMDA__Match_Found_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Contact Entry Match</value>
        </filters>
        <filters>
            <field>TRIMDA__False_Dupe__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TRIMDA__Resolved__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>TRIMDA__Score_E_mail__c</field>
            <operation>equals</operation>
            <value>100</value>
        </filters>
        <label>Review Contact Entry Match</label>
    </listViews>
    <listViews>
        <fullName>Lead_Entry_Match</fullName>
        <columns>NAME</columns>
        <columns>TRIMDA__Lead1__c</columns>
        <columns>TRIMDA__Lead2__c</columns>
        <columns>TRIMDA__ObjectName__c</columns>
        <columns>TRIMDA__Match_Class__c</columns>
        <columns>TRIMDA__Score__c</columns>
        <columns>TRIMDA__Score_Company__c</columns>
        <columns>TRIMDA__Score_Name__c</columns>
        <columns>TRIMDA__Score_E_mail__c</columns>
        <columns>TRIMDA__Same_Owner__c</columns>
        <columns>TRIMDA__Same_Review_Value__c</columns>
        <columns>TRIMDA__Resolved__c</columns>
        <columns>TRIMDA__Match_Found_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Lead Entry Match</value>
        </filters>
        <filters>
            <field>TRIMDA__False_Dupe__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TRIMDA__Resolved__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <label>Review Lead Entry Match</label>
    </listViews>
    <listViews>
        <fullName>Sean_s_Accounts_by_Alert</fullName>
        <columns>NAME</columns>
        <columns>TRIMDA__False_Dupe__c</columns>
        <columns>TRIMDA__Parent_Relationship__c</columns>
        <columns>TRIMDA__Account1__c</columns>
        <columns>TRIMDA__Owner_1__c</columns>
        <columns>TRIMDA__Account2__c</columns>
        <columns>TRIMDA__ObjectName__c</columns>
        <columns>TRIMDA__Match_Level__c</columns>
        <columns>TRIMDA__Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRIMDA__DupeAlertResultRef__c</field>
            <operation>equals</operation>
            <value>AR000196</value>
        </filters>
        <filters>
            <field>TRIMDA__False_Dupe__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TRIMDA__Resolved__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>TRIMDA__Account1__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>TRIMDA__Owner_1__c</field>
            <operation>notContain</operation>
            <value>click</value>
        </filters>
        <filters>
            <field>TRIMDA__Owner_2__c</field>
            <operation>notContain</operation>
            <value>click</value>
        </filters>
        <label>Sean&apos;s Accounts by Alert</label>
    </listViews>
    <listViews>
        <fullName>TRIMDA__AllExactMatchestoReview</fullName>
        <columns>NAME</columns>
        <columns>TRIMDA__Record_1__c</columns>
        <columns>TRIMDA__Record_2__c</columns>
        <columns>TRIMDA__ObjectName__c</columns>
        <columns>TRIMDA__Match_Level__c</columns>
        <columns>TRIMDA__Score__c</columns>
        <columns>TRIMDA__Score_Company__c</columns>
        <columns>TRIMDA__Score_Address__c</columns>
        <columns>TRIMDA__Score_Location__c</columns>
        <columns>TRIMDA__Score_Phone__c</columns>
        <columns>TRIMDA__Resolved__c</columns>
        <columns>TRIMDA__Match_Found_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRIMDA__False_Dupe__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TRIMDA__Resolved__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>TRIMDA__Match_Level__c</field>
            <operation>equals</operation>
            <value>Exact</value>
        </filters>
        <label>All Exact Matches to Review</label>
    </listViews>
    <listViews>
        <fullName>TRIMDA__AllLooseMatchestoReview</fullName>
        <columns>NAME</columns>
        <columns>TRIMDA__Record_1__c</columns>
        <columns>TRIMDA__Record_2__c</columns>
        <columns>TRIMDA__ObjectName__c</columns>
        <columns>TRIMDA__Match_Level__c</columns>
        <columns>TRIMDA__Score__c</columns>
        <columns>TRIMDA__Score_Company__c</columns>
        <columns>TRIMDA__Score_Address__c</columns>
        <columns>TRIMDA__Score_Location__c</columns>
        <columns>TRIMDA__Score_Phone__c</columns>
        <columns>TRIMDA__Resolved__c</columns>
        <columns>TRIMDA__Match_Found_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TRIMDA__False_Dupe__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TRIMDA__Resolved__c</field>
            <operation>equals</operation>
            <value>No</value>
        </filters>
        <filters>
            <field>TRIMDA__Match_Level__c</field>
            <operation>equals</operation>
            <value>Loose</value>
        </filters>
        <label>All Loose Matches to Review</label>
    </listViews>
</CustomObject>